--- a/src/pages/NlpApps/NlpApps.module.scss
+++ b/src/pages/NlpApps/NlpApps.module.scss
@@ -9,7 +9,7 @@
              
             }
             .DescText{
-                font-family: Open Sans,sans-serif!important;
+                font-family: Open Arial, sans-serif!important;
                 font-size: 1.1rem !important;
                  letter-spacing: 2px;
                  line-height: 30px;
