--- a/src/components/SampleFiles/SampleIntents.scss
+++ b/src/components/SampleFiles/SampleIntents.scss
@@ -110,5 +110,12 @@
     width: 700px;
 
    }
+   .sentence-container {
+    flex: 1; /* Expand to fill available space */
+    display: flex;
+    align-items: center;
+    padding-left: 8px; /* Add some space between checkbox and sentence */
+  }
+  
 
   
