--- a/src/components/Flow/FlowFile.scss
+++ b/src/components/Flow/FlowFile.scss
@@ -1,34 +1,19 @@
+.reactflow-1{
 
-h1{
-  border-right: 6px solid green;
-  height: 300px;
-  margin-right:550px;
-  margin-top: 130px;
+  .ant-dropdown{
+    position: relative;
+    margin-left: 326px;
+    top: -451px;
+  }
 
-}
-.e-input{
-  
-  border-radius: 3px;
-  width: 160px;
-  height: 50px;
-  margin-top: 230px;
-  margin-left:150px;
-}
 
-.e-s{
-  padding: 12px;
-  border-radius: 3px;
-  width: 160px;
-  height: 50px;
-  margin-top: 50px;
-  margin-left:450px;
 
-}
-.sub{
-  padding: 12px;
-  border-radius: 3px;
-  width: 160px;
-  height: 50px;
-  margin-top: 130px;
-  margin-left:850px;
+
+
+
+
+
+
+
+
 }
